--- a/pug/cards/_cards-third-slider.pug
+++ b/pug/cards/_cards-third-slider.pug
@@ -12,7 +12,7 @@
 				.card-third-slider__imgbox.card__imgbox(style=item.url)
 					.card-warning-text.hide
 						p
-				.card__content.card-third__content
+				.card__content.card-third__content.padding-all-15
 					.tagbox
 						.tag
 							button.button.button-tag= item.buttonTitle
