--- a/sass/general/_buttons.scss
+++ b/sass/general/_buttons.scss
@@ -193,6 +193,7 @@
 
 .button-tag {
 	min-width: 60px;
+	max-width: 149px;
 	padding: 2px 6px 2px;
 	background-color: #bcbdc0;
 	color: $light-color;
