--- a/pug/blocks/_block-imgl-text.pug
+++ b/pug/blocks/_block-imgl-text.pug
@@ -1,31 +1,38 @@
 // Текст + Изображение, тип "Текст справа", с заголовком, кнопкой и без 
-.cards
-	.card.card-full-head_special
-		.content-title
-			.content-titlebox_dark
-				h4 Текст + Изображение, тип "Текст справа", с заголовком, кнопкой и без
-		.content-title
-			.content-titlebox
-				h2 Новые технологии на ВМЗ в 2019
-	.card.card-third
-		.card-third__imgbox.card__imgbox(style='background-image: url(img/block-img-01.jpg);')
-			.card-warning-text.hide
+.row
+	.col-12
+		.card.card-full-head_special
+			.content-title
+				.content-titlebox_dark
+					h4 Текст + Изображение, тип "Текст справа", с заголовком, кнопкой и без
+			.content-title
+				.content-titlebox
+					h2 Новые технологии на ВМЗ в 2019
+.row
+	.col-xl-4
+		.card
+			.card__imgbox.card__imgbox_sm(style='background-image: url(img/block-img-01.jpg);')
+				.card-warning-text.hide
+					p
+	.col-xl-8
+		.card
+			.card__text.fix-height-210.text-ddd-210
 				p
-	.card.cardTwoThirds
-		.card__text.cardTwoThirds__text
-			p
-				| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
-			p
-				| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический
-			a.button.card__more(href='#') Читать далее
-	.card.card-third
-		.card-third__imgbox.card__imgbox(style='background-image: url(img/block-img-02.jpg);')
-			.card-warning-text.hide
+					| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
 				p
-	.card.cardTwoThirds
-		.card__text.cardTwoThirds__text
-			p
-				| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса...
-			p
-				| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены выплавка
-			a.button.card__more(href='#') Читать далее
+					| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический
+				a.button.card__more(href='#') Читать далее
+.row
+	.col-xl-4
+		.card
+			.card-third__imgbox.card__imgbox(style='background-image: url(img/block-img-02.jpg);')
+				.card-warning-text.hide
+					p
+	.col-xl-8
+		.card
+			.card__text.fix-height-210.text-ddd-210
+				p
+					| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса...
+				p
+					| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены выплавка
+				a.button.card__more(href='#') Читать далее
