--- a/pug/blocks/_block-imgt-textb.pug
+++ b/pug/blocks/_block-imgt-textb.pug
@@ -1,25 +1,29 @@
 // Текст + Изображение, тип "2 колонки", возможность задать фикс. текст
-.cards
-	.card.card-full-head_special
-		.content-title
-			.content-titlebox_dark
-				h4 Текст + Изображение, тип "2 колонки", возможность задать фикс. текст
-		.content-title
-			.content-titlebox
-				h2 Новые технологии на ВМЗ в 2019
-	.card.card-half
-		.card-half-imgbox.card__imgbox(style='background-image: url(img/block-img-03.jpg);')
-			.card-warning-text.hide
+.row
+	.col-12
+		.card.card-full-head_special
+			.content-title
+				.content-titlebox_dark
+					h4 Текст + Изображение, тип "2 колонки", возможность задать фикс. текст
+			.content-title
+				.content-titlebox
+					h2 Новые технологии на ВМЗ в 2019
+.row
+	.col-xl-6
+		.card.card-half
+			.card__imgbox.card__imgbox_lg.margin-bottom-15(style='background-image: url(img/block-img-03.jpg);')
+				.card-warning-text.hide
+					p
+			.card__text.fix-height-260.text-ddd-260
 				p
-		.card__text.card-half__text
-			p
-				| Конкурс «Проектный Олимп» проводится с 2014 года аналитическим центром при Правительстве Российской Федерации. С 2017 года в конкурсе могут принимать участие не только органы государственной власти.
-			a.button.card__more(href='#') Читать далее
-	.card.card-half
-		.card-half-imgbox.card__imgbox(style='background-image: url(img/block-img-08.jpg);')
-			.card-warning-text.hide
+					| Конкурс «Проектный Олимп» проводится с 2014 года аналитическим центром при Правительстве Российской Федерации. С 2017 года в конкурсе могут принимать участие не только органы государственной власти.
+				a.button.card__more(href='#') Читать далее
+	.col-xl-6
+		.card.card-half
+			.card__imgbox.card__imgbox_lg.margin-bottom-15(style='background-image: url(img/block-img-08.jpg);')
+				.card-warning-text.hide
+					p
+			.card__text.fix-height-260.text-ddd-260
 				p
-		.card__text.card-half__text
-			p
-				| Конкурс «Проектный Олимп» проводится с 2014 года аналитическим центром при Правительстве Российской Федерации. С 2017 года в конкурсе могут принимать участие не только органы государственной власти, государственные корпорации и компании, а также частные компании, оказывающие наиболее значительное влияние на развитие экономики. Оценка в номинации «Лучший проект года» проводилась по методике Российской национальной ассоциации управления Российскойнациональнойассоциацииуправления
-			a.button.card__more(href='#') Читать далее
+					| Конкурс «Проектный Олимп» проводится с 2014 года аналитическим центром при Правительстве Российской Федерации. С 2017 года в конкурсе могут принимать участие не только органы государственной власти, государственные корпорации и компании, а также частные компании, оказывающие наиболее значительное влияние на развитие экономики. Оценка в номинации «Лучший проект года» проводилась по методике Российской национальной ассоциации управления Российскойнациональнойассоциацииуправления
+				a.button.card__more(href='#') Читать далее
