--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -9,6 +9,7 @@
   border: none;
 	// padding: 0 15px;
 	width: 100%;
+	height: 100%;
 	margin-bottom: 30px;
 	background-color: transparent;
   @include clearfix;
@@ -21,7 +22,7 @@
 		display: flex;
 		flex-direction: column;
 		height: 100%;
-		overflow: hidden;		
+		overflow: hidden;
 		border-radius: 5px;
 		background: #eeefef center no-repeat;
 		background-size: cover;
@@ -107,6 +108,10 @@
 		}
 		&_sm {
 			height: 210px;
+		}
+		&_xs {
+			height: 135px;
+			min-height: 135px;
 		}
 		&_full {
 			height: 300px;
@@ -233,6 +238,7 @@
 		min-height: 38px;
 		margin-bottom: 15px;
 		font-family: "PT Serif", serif;
+		font-size: 17px;
 		&>h1, &>h2, &>h3, &>h4, &>h5 {
       font-size: 38px;
 		}
