--- a/pug/calendar.pug
+++ b/pug/calendar.pug
@@ -15,9 +15,13 @@ block content
 
 	- var ID = 'event1-06-10-2018';
 	include articles/_article-01
+	.card
+		hr.card-hr
 
 	- var ID = 'event2-06-10-2018';
 	include articles/_article-02
+	.card
+		hr.card-hr
 
 	- var ID = 'event3-06-10-2018';
 	include articles/_article-03
