--- a/css/style.css
+++ b/css/style.css
@@ -247,6 +247,74 @@
   color: #797c82;
 }
 
+@font-face {
+  font-family: 'icomoon_part2';
+  src: url("../fonts/icon_part2/icomoon_part2.eot?fdk06v");
+  src: url("../fonts/icon_part2/icomoon_part2.eot?fdk06v#iefix") format("embedded-opentype"), url("../fonts/icon_part2/icomoon_part2.ttf?fdk06v") format("truetype"), url("../fonts/icon_part2/icomoon_part2.woff?fdk06v") format("woff"), url("../fonts/icon_part2/icomoon_part2.svg?fdk06v#icomoon_part2") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+.icon-like:before {
+  content: "\e908";
+  color: #bcbdc0;
+}
+
+.icon-search:before {
+  content: "\e900";
+  color: #bcbdc0;
+}
+
+.icon-see:before {
+  content: "\e901";
+  color: #bcbdc0;
+}
+
+.icon-shop_cart:before {
+  content: "\e902";
+  color: #bcbdc0;
+}
+
+.icon-sybol:before {
+  content: "\e903";
+  color: #bcbdc0;
+}
+
+.icon-close:before {
+  content: "\e904";
+  color: #bcbdc0;
+}
+
+.icon-filters:before {
+  content: "\e905";
+  color: #bcbdc0;
+}
+
+.icon-fire:before {
+  content: "\e906";
+  color: #bcbdc0;
+}
+
+.icon-heart:before {
+  content: "\e907";
+  color: #bcbdc0;
+}
+
+.icon-more:before {
+  content: "\e909";
+  color: #bcbdc0;
+}
+
+.icon-burg:before {
+  content: "\e90a";
+  color: #bcbdc0;
+}
+
+.icon-mark:before {
+  content: "\e90b";
+  color: #bcbdc0;
+}
+
 .tooltip {
   position: absolute;
   z-index: 1070;
@@ -1144,6 +1212,10 @@ p,
   margin-bottom: 0;
 }
 
+hr {
+  margin: 0;
+}
+
 h2 span,
 .section-title span {
   color: #ee3124;
@@ -1304,14 +1376,6 @@ h2 span,
   transition: none;
 }
 
-.link-special {
-  border-bottom: 1px dashed #797c82;
-}
-
-.link-special:focus {
-  border-bottom: 1px dashed #797c82;
-}
-
 .link-big {
   color: #5e6167;
   font-family: "Roboto", sans-serif;
@@ -1468,6 +1532,22 @@ h2 span,
 .button-tag-o_light {
   border-color: #ffffff;
   color: #ffffff;
+}
+
+.button-big-o {
+  padding: 20px;
+  width: 100%;
+  min-width: 270px;
+  margin-bottom: 15px;
+  font-size: 16px;
+  text-transform: uppercase;
+  border: 1px solid #DDDEE0;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  color: #797c82;
+  -webkit-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .form-search__label {
@@ -3301,6 +3381,13 @@ h2 span,
   color: #bcbdc0;
 }
 
+.content-text_special p {
+  font-family: "PT Serif", serif;
+  font-size: 14px;
+  color: #000000;
+  line-height: 1.5;
+}
+
 .content-filter {
   display: -webkit-box;
   display: -webkit-flex;
@@ -3465,7 +3552,6 @@ h2 span,
   display: block;
   border: none;
   width: 100%;
-  height: 100%;
   margin-bottom: 30px;
   background-color: transparent;
 }
@@ -3874,7 +3960,7 @@ h2 span,
 
 .card-logo__imgbox {
   display: inline-block;
-  width: 155px;
+  width: 162px;
   height: 120px;
   line-height: 90px;
   vertical-align: middle;
@@ -4168,6 +4254,30 @@ h2 span,
   right: 7.5px;
 }
 
+.card-icons {
+  padding: 0 15px;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  border: 1px solid #a1a3a7;
+  background-color: rgba(244, 245, 245, 0.8);
+  text-align: center;
+}
+
+.card-icons table {
+  width: 100%;
+  border-collapse: separate;
+  border-spacing: 0 30px;
+}
+
+.card-icons tr {
+  margin-bottom: 30px;
+}
+
+.card-icons td {
+  width: 25%;
+  color: #bcbdc0;
+}
+
 .card-number-elem {
   cursor: pointer;
 }
@@ -4187,7 +4297,37 @@ h2 span,
 }
 
 .card-links__items {
+  width: 100%;
   padding-left: 15px;
+}
+
+.card-links__item {
+  padding: 5px 10px;
+  margin-bottom: 10px;
+  border: 1px solid transparent;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  -webkit-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.card-links__head {
+  margin-bottom: 5px;
+}
+
+.card-links__head::after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+.card-links__title {
+  float: left;
+}
+
+.card-links__remove {
+  text-align: right;
 }
 
 .card-links__lnkbox {
@@ -4203,13 +4343,26 @@ h2 span,
   margin-bottom: 0;
 }
 
-.card-links a {
+.card-links__lnk {
   color: inherit;
   font-size: 20px;
   font-weight: inherit;
   -webkit-transition: color 0.2s;
   -o-transition: color 0.2s;
   transition: color 0.2s;
+  font-family: "PT Serif", serif;
+}
+
+.card-links__lnk.color-thin {
+  color: #a1a3a7;
+}
+
+.card-links__lnk.text-ddd {
+  max-height: 25px;
+}
+
+.card-links__lnk_small {
+  font-size: 14px;
 }
 
 .widget-calendar {
@@ -4846,18 +4999,6 @@ h2 span,
   position: relative;
   width: 100%;
   margin-bottom: 30px;
-}
-
-.article:after {
-  content: "";
-  position: absolute;
-  display: block;
-  bottom: 0;
-  right: 15px;
-  left: 15px;
-  height: 1px;
-  background-color: #707070;
-  opacity: 0.4;
 }
 
 .article:last-child {
@@ -5505,7 +5646,7 @@ h2 span,
   }
 
   .link-special:hover {
-    border-bottom: 1px solid #484a4d;
+    color: #ee3124;
   }
 
   .link-big:hover {
@@ -5540,6 +5681,21 @@ h2 span,
   .button-tag:hover {
     background: #797c82;
     color: #ffffff;
+  }
+
+  .button-big-o:hover {
+    border-color: #a1a3a7;
+    background-color: #F4F5F5;
+  }
+
+  .button-big-o-danger:hover {
+    border-color: #ee3124;
+    color: #ee3124;
+  }
+
+  .button-big-o-special:hover {
+    border-color: #ee3124;
+    background-color: transparent;
   }
 
   .form__button:hover {
@@ -5640,13 +5796,27 @@ h2 span,
     padding: 14px;
   }
 
+  .card-icons td:hover {
+    color: #5e6167;
+  }
+
   .card-number-elem:hover {
     color: #ffffff;
   }
 
-  .card-links a:hover {
+  .card-links__item:hover {
+    background-color: #F4F5F5;
+    border-color: #DDDEE0;
+  }
+
+  .card-links__lnk:hover {
     color: #000000;
     text-decoration: underline;
+  }
+
+  .card-links__lnk.link-special:hover {
+    color: #ee3124;
+    text-decoration: none;
   }
 
   .widget-calendar .ui-state-default:hover {
