--- a/pug/calendar2.pug
+++ b/pug/calendar2.pug
@@ -17,8 +17,13 @@ block content
 	- var ID = 'event1-14-10-2018';
 	include articles/_article-01
 
+	.card
+		hr.card-hr
 	- var ID = 'event2-14-10-2018';
 	include articles/_article-02
 
+
+	.card
+		hr.card-hr
 	- var ID = 'event3-14-10-2018';
 	include articles/_article-03
