--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -9,7 +9,7 @@
   border: none;
 	// padding: 0 15px;
 	width: 100%;
-	height: 100%;
+	//height: 100%;
 	margin-bottom: 30px;
 	background-color: transparent;
   @include clearfix;
@@ -310,7 +310,7 @@
 		}
 		&__imgbox {
 			display: inline-block;
-			width: 155px;
+			width: 162px;
 			height: 120px;
 			line-height: 90px;
 			vertical-align: middle;
@@ -565,6 +565,28 @@
 			}
 		}
 	}
+	&-icons {
+		padding: 0 15px;
+		border-radius: 5px;
+		border: 1px solid $thin-color;
+		background-color: rgba(#f4f5f5, 0.8);
+		text-align: center;
+		table {
+			width: 100%;
+			border-collapse: separate;
+			border-spacing: 0 30px;
+		}
+		tr {
+			margin-bottom: 30px;
+		}
+		td {
+			width: 25%;
+			color: #bcbdc0;
+			@include hover {
+				color: $basic-color;
+			}
+		}
+	}
 }
 .card-number-elem {
 	cursor: pointer;
@@ -583,7 +605,29 @@
 		text-align: center;
 	}
 	&__items {
+		width: 100%;
 		padding-left: 15px;
+	}
+	&__item {
+		padding: 5px 10px;
+		margin-bottom: 10px;
+		border: 1px solid transparent;
+		border-radius: 5px;
+		transition: 0.4s;
+		@include hover {
+			background-color: #F4F5F5;
+			border-color: #DDDEE0;
+		}
+	}
+	&__head {
+		margin-bottom: 5px;
+		@include clearfix;
+	}
+	&__title {
+		float: left;
+	}
+	&__remove {
+		text-align: right;
 	}
 	&__lnkbox {
 		color: $dark-color;
@@ -596,14 +640,31 @@
 			margin-bottom: 0;
 		}
 	}
-	& a {
+	&__lnk {
 		color: inherit;
 		font-size: 20px;
 		font-weight: inherit;
 		transition: color 0.2s;
+		font-family: "PT Serif", serif;
+		&.color-thin {
+			color: #a1a3a7;
+		}
 		@include hover {
 			color: #000000;
 			text-decoration: underline;
 		}
+		&.link-special {
+			@include hover {
+				color: $special-color;
+				text-decoration: none;
+			}
+		}
+		&.text-ddd {
+			max-height: 25px;
+		}
+		&_small {
+			font-size: 14px;
+		}
 	}
+
 }
