--- a/sass/fonts/_icon.scss
+++ b/sass/fonts/_icon.scss
@@ -101,3 +101,62 @@
   content: "\e912";
   color: #797c82;
 }
+@font-face {
+  font-family: 'icomoon_part2';
+  src:  url('../fonts/icon_part2/icomoon_part2.eot?fdk06v');
+  src:  url('../fonts/icon_part2/icomoon_part2.eot?fdk06v#iefix') format('embedded-opentype'),
+  url('../fonts/icon_part2/icomoon_part2.ttf?fdk06v') format('truetype'),
+  url('../fonts/icon_part2/icomoon_part2.woff?fdk06v') format('woff'),
+  url('../fonts/icon_part2/icomoon_part2.svg?fdk06v#icomoon_part2') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.icon-like:before {
+  content: "\e908";
+  color: #bcbdc0;
+}
+.icon-search:before {
+  content: "\e900";
+  color: #bcbdc0;
+}
+.icon-see:before {
+  content: "\e901";
+  color: #bcbdc0;
+}
+.icon-shop_cart:before {
+  content: "\e902";
+  color: #bcbdc0;
+}
+.icon-sybol:before {
+  content: "\e903";
+  color: #bcbdc0;
+}
+.icon-close:before {
+  content: "\e904";
+  color: #bcbdc0;
+}
+.icon-filters:before {
+  content: "\e905";
+  color: #bcbdc0;
+}
+.icon-fire:before {
+  content: "\e906";
+  color: #bcbdc0;
+}
+.icon-heart:before {
+  content: "\e907";
+  color: #bcbdc0;
+}
+.icon-more:before {
+  content: "\e909";
+  color: #bcbdc0;
+}
+.icon-burg:before {
+  content: "\e90a";
+  color: #bcbdc0;
+}
+.icon-mark:before {
+  content: "\e90b";
+  color: #bcbdc0;
+}
