--- a/css/style.css
+++ b/css/style.css
@@ -151,168 +151,128 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-comment:before {
-  content: "\e906";
-  color: #797c82;
-}
-
-.icon-like:before {
-  content: "\e911";
-  color: #797c82;
-}
-
 .icon-aircraft:before {
   content: "\e900";
-  color: #a1a3a7;
 }
 
 .icon-arrow-down:before {
   content: "\e901";
-  color: #fff;
 }
 
 .icon-barcode:before {
   content: "\e902";
-  color: #a1a3a7;
 }
 
 .icon-book:before {
   content: "\e903";
-  color: #a1a3a7;
 }
 
 .icon-box:before {
   content: "\e904";
-  color: #a1a3a7;
 }
 
 .icon-chess:before {
   content: "\e905";
-  color: #a1a3a7;
+}
+
+.icon-comment:before {
+  content: "\e906";
 }
 
 .icon-list:before {
   content: "\e907";
-  color: #a1a3a7;
 }
 
-.icon-men .path1:before {
+.icon-uniE908:before {
   content: "\e908";
-  color: #efedec;
 }
 
-.icon-men .path2:before {
+.icon-uniE909:before {
   content: "\e909";
-  margin-left: -1em;
-  color: #bcbdc0;
 }
 
 .icon-money:before {
   content: "\e90a";
-  color: #a1a3a7;
 }
 
 .icon-production:before {
   content: "\e90b";
-  color: #a1a3a7;
 }
 
 .icon-search:before {
   content: "\e90c";
-  color: #bcbdc0;
 }
 
 .icon-stat:before {
   content: "\e90d";
-  color: #a1a3a7;
 }
 
 .icon-arrow-top:before {
   content: "\e90e";
-  color: #e4e4e4;
 }
 
 .icon-check:before {
   content: "\e90f";
-  color: #fff;
 }
 
 .icon-menu-left-arrowtop:before {
   content: "\e910";
-  color: #bcbdc0;
+}
+
+.icon-like:before {
+  content: "\e911";
 }
 
 .icon-filters:before {
   content: "\e912";
-  color: #797c82;
 }
 
-@font-face {
-  font-family: 'icomoon_part2';
-  src: url("../fonts/icon_part2/icomoon_part2.eot?fdk06v");
-  src: url("../fonts/icon_part2/icomoon_part2.eot?fdk06v#iefix") format("embedded-opentype"), url("../fonts/icon_part2/icomoon_part2.ttf?fdk06v") format("truetype"), url("../fonts/icon_part2/icomoon_part2.woff?fdk06v") format("woff"), url("../fonts/icon_part2/icomoon_part2.svg?fdk06v#icomoon_part2") format("svg");
-  font-weight: normal;
-  font-style: normal;
+.icon-like1:before {
+  content: "\e913";
 }
 
-.icon-like:before {
-  content: "\e908";
-  color: #bcbdc0;
-}
-
-.icon-search:before {
-  content: "\e900";
-  color: #bcbdc0;
+.icon-search1:before {
+  content: "\e914";
 }
 
 .icon-see:before {
-  content: "\e901";
-  color: #bcbdc0;
+  content: "\e915";
 }
 
 .icon-shop_cart:before {
-  content: "\e902";
-  color: #bcbdc0;
+  content: "\e916";
 }
 
-.icon-sybol:before {
-  content: "\e903";
-  color: #bcbdc0;
+.icon-symbol:before {
+  content: "\e917";
 }
 
 .icon-close:before {
-  content: "\e904";
-  color: #bcbdc0;
+  content: "\e918";
 }
 
-.icon-filters:before {
-  content: "\e905";
-  color: #bcbdc0;
+.icon-filters1:before {
+  content: "\e919";
 }
 
 .icon-fire:before {
-  content: "\e906";
-  color: #bcbdc0;
+  content: "\e91a";
 }
 
 .icon-heart:before {
-  content: "\e907";
-  color: #bcbdc0;
+  content: "\e91b";
 }
 
 .icon-more:before {
-  content: "\e909";
-  color: #bcbdc0;
+  content: "\e91c";
 }
 
 .icon-burg:before {
-  content: "\e90a";
-  color: #bcbdc0;
+  content: "\e91d";
 }
 
 .icon-mark:before {
-  content: "\e90b";
-  color: #bcbdc0;
+  content: "\e91e";
 }
 
 .tooltip {
